--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,19 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "camera-controls": "^2.7.2",
+    "gsap": "^3.12.2",
+    "leaflet": "^1.9.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1",
+    "suncalc": "^1.9.0",
+    "three": "^0.156.1",
+    "tslib": "^2.6.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
