--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/suncalc": "^1.9.0",
     "axios": "^1.4.0",
     "camera-controls": "^2.7.2",
     "gsap": "^3.12.2",
