--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -15,5 +15,9 @@
         "DatabaseName": "WanderMap3D",
         "UserContainerName": "Accounts",
         "RoleContainerName": "Roles"
+    },
+    "PostmarkSettings": {
+        "ApiKey": "19fce7da-a06c-4446-ba57-b6ab46496351",
+        "Email":  "bohdan.kulchytskyy@gmail.com"
     }
 }
