--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -11,12 +12,14 @@
     "axios": "^1.4.0",
     "camera-controls": "^2.7.2",
     "gsap": "^3.12.2",
-    "leaflet": "^1.9.4",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "rxjs": "^7.8.1",
@@ -51,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.7",
     "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
