--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
+    "leaflet": "^1.9.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,7 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.7",
+    "@types/leaflet": "^1.9.8",
     "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
