--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "leaflet": "^1.9.4",
+    "leaflet-area-select": "^1.0.5",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
+    "@types/react-leaflet": "^3.0.0",
     "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
