--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@types/js-cookie": "^3.0.5",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
