--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "three": "^0.156.1",
     "tslib": "^2.6.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
