--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "tslib": "^2.6.2",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
