--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "rxjs": "^7.8.1",
+    "sonner": "^1.4.2",
     "suncalc": "^1.9.0",
     "three": "^0.156.1",
     "tslib": "^2.6.2",
