--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "rxjs": "^7.8.1",
     "sonner": "^1.4.2",
     "suncalc": "^1.9.0",
