--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
