--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@mapbox/search-js-react": "^1.0.0-beta.18",
+    "@tanstack/react-query": "^5.29.0",
     "@types/js-cookie": "^3.0.5",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
