--- a/client/package.json
+++ b/client/package.json
@@ -56,15 +56,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/js-cookie": "^3.0.5",
     "@types/json-schema": "^7.0.15",
     "@types/leaflet": "^1.9.8",
-    "@types/react-leaflet": "^3.0.0",
-    "@types/three": "^0.156.0",
-    "@types/js-cookie": "^3.0.5",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-leaflet": "^3.0.0",
     "@types/suncalc": "^1.9.0",
+    "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
     "prettier": "^3.2.5",
