--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
+    "react-input-color": "^4.0.1",
     "react-leaflet": "^4.2.1",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.14.1",
